<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent" android:layout_height="match_parent"
            tools:context="com.android.movies.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin" android:layout_marginVertical="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent" android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/poster_iv"
                android:layout_width="@dimen/poster_image_width" android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/movie_original_title" android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent" android:layout_gravity="center"
                android:layout_height="match_parent" android:orientation="vertical">

                <ImageView
                    android:id="@+id/favorite_iv"
                    android:layout_width="@dimen/square_dimensions_size"
                    android:layout_height="@dimen/square_dimensions_size"
                    android:adjustViewBounds="true" android:layout_gravity="center"
                    android:contentDescription="@string/movie_trailer" android:layout_marginLeft="@dimen/size_20_dp"
                    android:scaleType="centerCrop" android:src="@drawable/unfavorite" />

                <LinearLayout android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" android:paddingTop="@dimen/size_20_dp">

                    <TextView
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_gravity="center" android:text="@string/movie_original_title"
                        android:textStyle="bold" android:paddingLeft="@dimen/size_10_dp" android:paddingTop="@dimen/size_10_dp" />

                    <TextView
                        android:id="@+id/movie_original_title" android:layout_gravity="center"
                        android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingLeft="@dimen/size_10_dp"/>

                    <TextView
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:layout_gravity="center" android:text="@string/movie_release_date"
                        android:textStyle="bold" android:paddingLeft="10sp" android:paddingTop="@dimen/size_10_dp" />

                    <TextView
                        android:id="@+id/release_date_tv" android:layout_gravity="center"
                        android:layout_width="wrap_content" android:layout_height="wrap_content" android:paddingLeft="@dimen/size_10_dp"/>

                    <TextView
                        android:layout_width="wrap_content"  android:layout_height="wrap_content"
                        android:text="@string/movie_average_vote" android:layout_gravity="center"
                        android:textStyle="bold" android:paddingLeft="@dimen/size_10_dp" android:paddingTop="@dimen/size_10_dp" />

                    <TextView
                        android:id="@+id/movie_average_vote_tv" android:layout_gravity="center"
                        android:layout_width="wrap_content" android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/size_10_dp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/movie_plot_synopsis" android:paddingTop="@dimen/size_10_dp" android:textStyle="bold" />

        <TextView
            android:id="@+id/plot_synopsis_tv" android:paddingBottom="@dimen/size_10_dp"
            android:layout_width="wrap_content" android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/trailers" android:textStyle="bold" android:textSize="@dimen/bigger_text_size" />

        <ListView
            android:id="@+id/trailers_list_view" android:layout_width="match_parent" android:layout_height="@dimen/size_200_dp"  />

        <TextView
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/reviews" android:textStyle="bold" android:textSize="@dimen/bigger_text_size" />

        <ListView
            android:id="@+id/reviews_list_view" android:layout_width="match_parent" android:layout_height="@dimen/size_300_dp" />

    </LinearLayout>

</ScrollView>